--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,8 @@
-<footer class="site-footer">
+<footer>
     <p>&copy; <%= new Date().getFullYear() %> CSE Motors. All rights reserved.</p>
+    <p>
+        <a href="/privacy">Privacy Policy</a> |
+        <a href="/terms">Terms of Service</a> |
+        <a href="/error/trigger">Trigger Error (Testing)</a>
+    </p>
 </footer>
